--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,17 +21,17 @@
             </intent-filter>
         </activity>
         <activity android:name=".MarkEditActivity"
-
+            android:launchMode="singleTop"
             >
         </activity>
         <activity android:name=".Activity.ImageBucketChooseActivity"
-
+            android:launchMode="singleTop"
             />
         <activity android:name=".Activity.ImageChooseActivity"
-
+            android:launchMode="singleTop"
             />
         <activity android:name=".Activity.ImageZoomActivity"
-
+            android:launchMode="singleTop"
             />
         <activity android:name=".Activity.PublishActivity"
 
