--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -36,7 +37,9 @@
         <activity android:name=".Activity.PublishActivity"
 
             />
-        <activity android:name=".Activity.MarkCircleActivity"/>
+        <activity android:name=".Activity.MarkCircleActivity"
+                  android:hardwareAccelerated="true"
+            />
     </application>
 
 </manifest>
